programminglanguage/programminglanguage/src/programminglanguage/MyNewGrammar.java
/* Generated By:JavaCC: Do not edit this line. MyNewGrammar.java */
package programminglanguage;
import java.io.BufferedWriter;
import java.io.FileWriter;
import java.io.IOException;
import java.io.File;
import java.io.FileNotFoundException;
import java.util.Scanner;

public class MyNewGrammar implements MyNewGrammarConstants {
  public static void main(String args []) throws ParseException
  {

    MyNewGrammar parser = new MyNewGrammar(System.in);
    String txt;
    String fileName= "C:\u005c\u005cUsers\u005c\u005c\ubb38\ud0dc\ud604\u005c\u005cDesktop\u005c\u005c3\ud559\ub1442\ud559\uae30\u005c\u005cpl\u005c\u005cproject\u005c\u005cresult\u005c\u005cfragment_avg_pool_result.txt";
        txt = parser.one_line();

        System.out.println(txt);
        try {
                BufferedWriter fw = new BufferedWriter(new FileWriter(fileName));
                fw.write(txt);
                fw.flush();
                fw.close();
          }catch(Exception e) {
            e.printStackTrace();
            }

    /*while (true)
    {
      try
      {
        switch (MyNewGrammar.one_line())
        {
          case 0 : 
          System.out.println("OK.");
          break;
          case 1 : 
          System.out.println("Goodbye.");
          break;
          default : 
          break;
        }
      }
      catch (Exception e)
      {
        System.out.println("NOK.");
        System.out.println(e.getMessage());
        MyNewGrammar.ReInit(System.in);
      }
      catch (Error e)
      {
        System.out.println("Oops.");
        System.out.println(e.getMessage());
        break;
      }
    }*/
  }

  static final public String one_line() throws ParseException {
  String res = "";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case GRAPH:
      res = graph_definition();
      ;
      break;
    case FRAGMENT:
    case 68:
      res = fragment_definition();
      ;
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    System.out.println(res);
    {if (true) return res;}
    throw new Error("Missing return statement in function");
  }

  static final public String graph_definition() throws ParseException {
  String res1;
  String res2;
    res1 = graph_declaration();
    res2 = body();
      res1 = res1 + res2;
    {if (true) return res1;}
    throw new Error("Missing return statement in function");
  }

  static final public String fragment_definition() throws ParseException {
  String res1;
  String res2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FRAGMENT:
      res1 = fragment_declaration();
      res2 = body2();
      res1 = res1 + res2;
    {if (true) return res1;}
      break;
    case 68:
      res1 = fragment_declaration2();
      res2 = body3();
      res1 = res1 + res2;
    {if (true) return res1;}
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public String body3() throws ParseException {
  String a;
  String b = "";
    jj_consume_token(63);
    label_1:
    while (true) {
      a = assignment2();
      b = b + "\u005cr\u005cn" + a;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_1;
      }
    }
    jj_consume_token(64);
      {if (true) return b+"\u005cr\u005cn\u005cr\u005cn"+"return y";}
    throw new Error("Missing return statement in function");
  }

  static final public String body2() throws ParseException {
  String a;
  String b = "";
    jj_consume_token(63);
    label_2:
    while (true) {
      a = assignment2();
      b = b + "\u005cr\u005cn" + a;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
    }
    jj_consume_token(64);
      {if (true) return b+"\u005cr\u005cn\u005cr\u005cn"+"return output";}
    throw new Error("Missing return statement in function");
  }

  static final public String assignment2() throws ParseException {
  String a;
  String b;
  String c;
    a = lvalue_expr();
    jj_consume_token(ASSIGN);
    b = rvalue_expr2();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEMI_COLON:
      jj_consume_token(SEMI_COLON);
      break;
    case IF:
    case 65:
    case 66:
    case 67:
      c = if_else_expr();
      b = b + c;
      jj_consume_token(SEMI_COLON);
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return a + "=" + b + ";";}
    throw new Error("Missing return statement in function");
  }

  static final public String rvalue_expr2() throws ParseException {
  String a;
  Token res;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SHAPE_OF:
      a = shape_of();
    {if (true) return a;}
      break;
    case DECONV:
      jj_consume_token(DECONV);
      jj_consume_token(L_PAREN);
      a = argument_list();
      jj_consume_token(R_PAREN);
    {if (true) return "tf.layers.conv2d_transpose" + "(" + a + ")";}
      break;
    case CONV:
      jj_consume_token(CONV);
      jj_consume_token(L_PAREN);
      a = argument_list();
      jj_consume_token(R_PAREN);
    {if (true) return "tf.layers.conv2d" + "(" + a + ")";}
      break;
    case AVG_POOL:
      jj_consume_token(AVG_POOL);
      jj_consume_token(L_PAREN);
      a = argument_list();
      jj_consume_token(R_PAREN);
    {if (true) return "tf.nn.avg_pool" + "(" + a + ")";}
      break;
    case KEEP:
      res = jj_consume_token(KEEP);
      jj_consume_token(L_PAREN);
      a = argument_list();
      jj_consume_token(R_PAREN);
    {if (true) return res.toString() + "(" + a + ")";}
      break;
    case IDENTIFIER:
      res = jj_consume_token(IDENTIFIER);
      jj_consume_token(L_PAREN);
      a = argument_list();
      jj_consume_token(R_PAREN);
    {if (true) return "tf." + res.toString() + "(" + a + ")";}
      break;
    case SIGMOID:
      jj_consume_token(SIGMOID);
      jj_consume_token(L_PAREN);
      a = plus_list();
      jj_consume_token(R_PAREN);
        {if (true) return "tf.sigmoid"+"("+a+")";}
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public String plus_list() throws ParseException {
  String a;
  String b;
    a = new_one();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_3;
      }
      jj_consume_token(PLUS);
      b = new_one();
                                        a=a+"+"+b;
    }
                {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  static final public String new_one() throws ParseException {
  Token res;
  Token res2;
  String a="";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LINEAR:
      jj_consume_token(LINEAR);
      jj_consume_token(L_PAREN);
      res = jj_consume_token(IDENTIFIER);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_4;
        }
        jj_consume_token(COMMA);
        res2 = jj_consume_token(IDENTIFIER);
                                                                    a=a+","+res2.toString();
      }
      jj_consume_token(R_PAREN);
        {if (true) return "linear("+res.toString()+a+")";}
      break;
    case IDENTIFIER:
      res = jj_consume_token(IDENTIFIER);
        {if (true) return res.toString();}
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public String shape_of() throws ParseException {
  Token res;
  Token res2;
  Token res1;
  String a;
  String b;
    res = jj_consume_token(SHAPE_OF);
    jj_consume_token(L_PAREN);
    res1 = jj_consume_token(IDENTIFIER);
    jj_consume_token(R_PAREN);
    jj_consume_token(L_BRACKET);
    res2 = jj_consume_token(NUMERIC_LITERAL);
    jj_consume_token(R_BRACKET);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DIV:
      jj_consume_token(DIV);
      jj_consume_token(GROUPS);
      a = if_else_expr();
    b= "tf.shape" + "(" + res1.toString() + ")" + "[" + res2.toString() + "]" + "/  " + "groups " + a;
      break;
    default:
      jj_la1[9] = jj_gen;
       b="tf.shape"+"("+res1.toString()+")"+"["+res2.toString()+"]";
    }
    {if (true) return b;}
    throw new Error("Missing return statement in function");
  }

  static final public String if_else_expr() throws ParseException {
  String a;
  String b;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
      jj_consume_token(IF);
      a = total_expr();
      jj_consume_token(ELSE);
      b = total_expr();
    {if (true) return " if " + a + " else " + b;}
      break;
    case 65:
      jj_consume_token(65);
                {if (true) return " if len(dilation) != 0 else []";}
      break;
    case 66:
      jj_consume_token(66);
        {if (true) return " if len(padding) != 0 else []";}
      break;
    case 67:
      jj_consume_token(67);
        {if (true) return " if len(stride) != 0 else []";}
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public String total_expr() throws ParseException {
  String a;
  Token res1;
  Token res2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case USE_BIAS:
      jj_consume_token(USE_BIAS);
        {if (true) return "use_bias";}
      break;
    case MAX_POOL:
    case NCHANGE:
    case CONV:
    case CONS:
    case TF:
    case IDENTIFIER:
      a = invocation();
    {if (true) return a;}
      break;
    case NUMERIC_LITERAL:
    case STRING_LITERAL:
    case L_BRACKET:
      a = rvalue_expr_except();
    {if (true) return a;}
      break;
    case GROUPS:
      res1 = jj_consume_token(GROUPS);
      jj_consume_token(NOT_EQUAL);
      res2 = jj_consume_token(NUMERIC_LITERAL);
    {if (true) return res1.toString() + " != " + res2.toString() + " ";}
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public String rvalue_expr_except() throws ParseException {
  Token res;
  String a;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUMERIC_LITERAL:
      res = jj_consume_token(NUMERIC_LITERAL);
    {if (true) return res.toString();}
      break;
    case STRING_LITERAL:
      res = jj_consume_token(STRING_LITERAL);
    {if (true) return res.toString();}
      break;
    case L_BRACKET:
      a = array_rvalue_expr();
    {if (true) return a;}
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public String fragment_declaration2() throws ParseException {
  Token res;
  String a;
    jj_consume_token(68);
    jj_consume_token(L_PAREN);
    a = parameter_list();
    jj_consume_token(R_PAREN);
    jj_consume_token(69);
    jj_consume_token(L_PAREN);
    result_list();
    jj_consume_token(R_PAREN);
    {if (true) return "def " + "simple_recurrent_network" + "(" + a + ")" + ":\u005cr\u005cn";}
    throw new Error("Missing return statement in function");
  }

  static final public String fragment_declaration() throws ParseException {
  Token res;
  String a;
    jj_consume_token(FRAGMENT);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CONV:
      res = jj_consume_token(CONV);
      break;
    case IDENTIFIER:
      res = jj_consume_token(IDENTIFIER);
      break;
    case NCHANGE:
      res = jj_consume_token(NCHANGE);
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(L_PAREN);
    a = parameter_list();
    jj_consume_token(R_PAREN);
    jj_consume_token(69);
    jj_consume_token(L_PAREN);
    result_list();
    jj_consume_token(R_PAREN);
    {if (true) return "def " + res.toString() + "(" + a + ")" + ":\u005cr\u005cn";}
    throw new Error("Missing return statement in function");
  }

  static final public void result_list() throws ParseException {
    result();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_5;
      }
      jj_consume_token(COMMA);
      result();
    }
  }

  static final public void result() throws ParseException {
    jj_consume_token(IDENTIFIER);
    jj_consume_token(COLON);
    type_spec();
  }

  static final public String parameter_list() throws ParseException {
  Token res;
  String a = "";
  String b;
    a = parameter();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_6;
      }
      jj_consume_token(COMMA);
      b = parameter();
      a = a + ", " + b;
    }
    {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  static final public String parameter() throws ParseException {
  Token res;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      res = jj_consume_token(IDENTIFIER);
      jj_consume_token(COLON);
      type_spec();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGN:
        jj_consume_token(ASSIGN);
        literal_expr();
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
    {if (true) return res.toString();}
      break;
    case GROUPS:
      res = jj_consume_token(GROUPS);
      jj_consume_token(COLON);
      type_spec();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGN:
        jj_consume_token(ASSIGN);
        literal_expr();
        break;
      default:
        jj_la1[17] = jj_gen;
        ;
      }
    {if (true) return res.toString();}
      break;
    case LABEL:
      res = jj_consume_token(LABEL);
      jj_consume_token(COLON);
      type_spec();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGN:
        jj_consume_token(ASSIGN);
        literal_expr();
        break;
      default:
        jj_la1[18] = jj_gen;
        ;
      }
    {if (true) return res.toString();}
      break;
    case SCOPE:
      res = jj_consume_token(SCOPE);
      jj_consume_token(COLON);
      type_spec();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGN:
        jj_consume_token(ASSIGN);
        literal_expr();
        break;
      default:
        jj_la1[19] = jj_gen;
        ;
      }
    {if (true) return res.toString();}
      break;
    case USE_BIAS:
      res = jj_consume_token(USE_BIAS);
      jj_consume_token(COLON);
      type_spec();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGN:
        jj_consume_token(ASSIGN);
        literal_expr();
        break;
      default:
        jj_la1[20] = jj_gen;
        ;
      }
    {if (true) return res.toString();}
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public void literal_expr() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUMERIC_LITERAL:
    case STRING_LITERAL:
    case LOGICAL_LITERAL:
      literal();
      break;
    case L_BRACKET:
      jj_consume_token(L_BRACKET);
      jj_consume_token(R_BRACKET);
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void literal() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUMERIC_LITERAL:
      jj_consume_token(NUMERIC_LITERAL);
      break;
    case STRING_LITERAL:
      jj_consume_token(STRING_LITERAL);
      break;
    case LOGICAL_LITERAL:
      jj_consume_token(LOGICAL_LITERAL);
      break;
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }
